Revert "Attempt to fix feature background images display on iphone & ipad"
This reverts commit db50726b283ac8d516a9d6a44ad8d94a14041688.

--- a/css/hackfest.css
+++ b/css/hackfest.css
@@ -40,7 +40,7 @@ body {
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     min-height: 200px;
 }
 
